[package]
name = "remo"
version = "0.1.0"
edition = "2021"
[[bin]]
name = "remo"
path = "src/bin/remo.rs"
[[bin]]
name = "milkmilk"
path = "src/bin/milkmilk.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_xmlrpc = "0.1.1"
anyhow = "1.0.57"
amiquip = { version = "0.4", default-features = false }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "blocking", "json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde-xml-rs = "0.5.1"
getopt = "1.1.3"
getopt_rs = "0.1.3"
